welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:39: error: Unmatched closing brace '}' ignored here
}
^